# eea-chatbot-tests

./: .gitignore  01.questions.json  01.questions.jsonl  CLAUDE.md  GUIDE.md  LICENSE.md  Makefile  README.md  __init__.py  analyze.py  config.example.json  config.py  console.py  llm_analysis.py  main.py  output.py  plugin.py  pyproject.toml  pytest.ini  requirements.txt  runner.py  step.py  styles.css  utils.py
fixtures/: golden_dataset.json
page_objects/: __init__.py  chatbot_page.py  response.py
tests/: conftest.py  test_basic.py  test_questions.py
